@@ -8,7 +8,6 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -18,9 +17,7 @@ public class WishService {
     private final WishRepository wishRepository;
     private final PostRepository postRepository;
 
-    public void addWish(Long postId) {
-        Long userId = 1L; // 임시 userId (나중에 로그인 기능 붙이면 교체)
-
+    public void addWish(Long postId, Long userId) {
         Post post = postRepository.findById(postId)
                 .orElseThrow(() -> new IllegalArgumentException("존재하지 않는 게시글입니다."));
 
@@ -28,28 +25,19 @@ public class WishService {
             throw new IllegalArgumentException("이미 관심상품으로 등록된 게시글입니다.");
         }
 
-        Wish wish = Wish.builder()
-                .userId(userId)
-                .post(post)
-                .build();
-
-        wishRepository.save(wish);
+        wishRepository.save(Wish.builder().userId(userId).post(post).build());
     }
-    public void removeWish(Long postId) {
-        Long userId = 1L; // 임시 userId
 
+    public void removeWish(Long postId, Long userId) {
         Wish wish = wishRepository.findByUserIdAndPostId(userId, postId)
                 .orElseThrow(() -> new IllegalArgumentException("관심상품으로 등록되지 않은 게시글입니다."));
-
         wishRepository.delete(wish);
     }
-    @Transactional(readOnly = true)
-    public List<WishListResponse> getWishList() {
-        Long userId = 1L; // 임시 userId
 
-        return wishRepository.findAllByUserId(userId)
-                .stream()
+    @Transactional(readOnly = true)
+    public List<WishListResponse> getWishList(Long userId) {
+        return wishRepository.findAllByUserId(userId).stream()
                 .map(WishListResponse::new)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
